@@ -2,6 +2,7 @@
   o misc enhancements & cleanups
   o  fix tests for ignored faillure for %pre{,un}, %pretrans
      (was ignored since rpm-4.9.0)
+  o test that %pretrans do fail installtion (needs rpm-4.13)
 
 Version 8.05 - 18 March 2015
 
